--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #bb3e03;
+  background-color: #b9fbc0;
   padding: 2em;
 }
 
@@ -48,8 +48,8 @@ a:hover {
 }
 h1 {
   font-family: 'Playfair Display', serif;
-  font-size: 3rem;
-  padding: 2em;
+  font-size: 5rem;
+  padding: 1em;
 }
 
 .hero p {
@@ -100,3 +100,56 @@ h1 {
   margin: 3em;
 }
 
+.newsletter {
+  
+  background-color: #bde0fe;
+  margin: 0 auto;
+}
+
+form {
+  margin: 0 auto;
+  text-align: center;
+  padding: 0 3em 0 3em;
+}
+p {
+  padding: 1em;
+  font-size: 2em;
+}
+label {
+  display: block;
+  text-align: center;
+  margin-bottom: 1em;
+  font-size: 1.5em;
+}
+
+input {
+  /* display: block;
+  margin: 0 auto;
+  width: 200px;
+  height: 25px;
+  height: fit-content; */
+    border: 1px solid #707070;
+    width: fit-content;
+    padding: 1em;
+    box-sizing: border-box;
+    border-radius: 0.5em;
+    margin-top: 1.2em;
+}
+
+button {
+  border-radius: 5%;
+  text-decoration: none;
+  margin: 1em;
+}
+
+button {
+  background-color: white;
+  border: none;
+  width: fit-content;
+  color: black;
+  font-weight: bold;
+  padding: 1em 1em;
+  border-radius: .5em;
+  font-size: 1.3em;
+  cursor: pointer;
+}
