--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ li {
   padding: 0 2em 0 2em;
   list-style: none;
   text-decoration: none;
+  font-weight: bold;
 }
 
 .about {
@@ -50,10 +51,13 @@ h1 {
   font-family: 'Playfair Display', serif;
   font-size: 5rem;
   padding: 1em;
+  font-weight: bold;
 }
 
 .hero p {
   font-size: 1.5em;
+  text-align: left;
+  font-weight: bold;
 }
 
 .left-column {
@@ -94,10 +98,10 @@ h1 {
 }
 
 .left-text p {
-  border: 2px solid black;
-  padding: 0.9em;
+  padding: 0.5em 0.9em 0.5em 0.9em;
   font-size: 1.5em;
   margin: 3em;
+  font-weight: normal;
 }
 
 .newsletter {
@@ -109,17 +113,19 @@ h1 {
 form {
   margin: 0 auto;
   text-align: center;
-  padding: 0 3em 0 3em;
+  padding: 0 3em 0em 3em;
 }
 p {
   padding: 1em;
   font-size: 2em;
+  font-weight: bold;
 }
 label {
   display: block;
   text-align: center;
   margin-bottom: 1em;
   font-size: 1.5em;
+  font-style: italic;
 }
 
 input {
